I don't know why, but it's working for me

--- a/keys.cfg
+++ b/keys.cfg
@@ -1,5 +1,7 @@
 [GENERAL]
 SHUTDOWN_DETECT = 27
+DEBUG=true
+MINIMAL = False
 
 [KEYS]
 LEFT = 26
@@ -11,19 +13,19 @@ BUTTON_B = 7
 BUTTON_X = 4
 BUTTON_Y = 17
 BUTTON_L1 = 16
-BUTTON_R1 = 20
+BUTTON_R1 = 18
 SELECT = 22
 START = 15
-HOTKEY = 23
+HOTKEY = 22
 
 [JOYSTICK]
+ON_BY_DEFAULT=True
 DISABLED=True
-ON_BY_DEFAULT=False
 DEADZONE=300
 VCC=1600
 
 [BATTERY]
 ENABLED=True
-FULL_BATT_VOLTAGE=375
-BATT_LOW_VOLTAGE=340
-BATT_SHUTDOWN_VOLT=328
+FULL_BATT_VOLTAGE=420
+BATT_LOW_VOLTAGE=320
+BATT_SHUTDOWN_VOLT=300
