* Renamed confusion configuration options * Lowered bounce time * Fixed analog stick * Stuff

--- a/keys.cfg
+++ b/keys.cfg
@@ -1,6 +1,6 @@
 [GENERAL]
 SHUTDOWN_DETECT = 27
-DEBUG=true
+DEBUG=False
 MINIMAL = False
 
 [KEYS]
@@ -19,8 +19,8 @@ START = 15
 HOTKEY = 22
 
 [JOYSTICK]
-ON_BY_DEFAULT=True
-DISABLED=True
+ENABLE_ON_BOOT=True
+ENABLED=True
 DEADZONE=300
 VCC=1600
 
